[gd_scene load_steps=10 format=2]

[ext_resource path="res://graphics/Back.jpg" type="Texture" id=1]
[ext_resource path="res://Menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Board.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Game.gd" type="Script" id=4]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 100
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 90
font_data = ExtResource( 5 )

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="Back" type="Sprite" parent="."]
position = Vector2( 510.652, 300.612 )
scale = Vector2( 0.639779, 0.500078 )
texture = ExtResource( 1 )

[node name="Board" parent="Back" instance=ExtResource( 3 )]
position = Vector2( -798.17, -601.13 )
scale = Vector2( 2.19881, 2.20213 )

[node name="Menu" parent="Back" instance=ExtResource( 2 )]
margin_left = 485.0
margin_top = -576.0
margin_right = 3425.0
margin_bottom = -576.0
rect_scale = Vector2( 0.256794, 1.00244 )

[node name="ItemList" parent="Back/Menu" index="0"]
margin_left = -1639.0
margin_top = -18.0
margin_right = -4599.0
margin_bottom = -18.0

[node name="ExitButton" parent="Back/Menu/ItemList" index="1"]
custom_fonts/font = SubResource( 1 )

[node name="ResetButton" parent="Back/Menu/ItemList" index="2"]
custom_fonts/font = SubResource( 2 )

[node name="IdleButton" parent="Back/Menu/ItemList" index="3"]
custom_fonts/font = SubResource( 3 )

[node name="PlayerLabel" parent="Back/Menu/ItemList" index="4"]
margin_top = -186.203
margin_right = 0.00012207
margin_bottom = -86.2026
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
[connection signal="playerChanged" from="Back/Board" to="." method="_on_Board_playerChanged"]
[connection signal="playerChecked" from="Back/Board" to="." method="_on_Board_playerChecked"]

[editable path="Back/Menu"]
